pkg/plugins/policies/meshloadbalancingstrategy/plugin/v1alpha1/testdata/zone-proxy-hash-policies.listener.golden.yaml
resources:
- name: self_zoneegress_dp_ze-port
  resource:
    '@type': type.googleapis.com/envoy.config.listener.v3.Listener
    address:
      socketAddress:
        address: 10.0.0.1
        portValue: 10002
    enableReusePort: true
    filterChains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typedConfig:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          httpFilters:
          - name: envoy.filters.http.router
            typedConfig:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          internalAddressConfig:
            cidrRanges:
            - addressPrefix: 127.0.0.1
              prefixLen: 32
          routeConfig:
            name: kri_extsvc_default___example_9000
            validateClusters: false
            virtualHosts:
            - domains:
              - '*'
              name: kri_extsvc_default___example_9000
              routes:
              - match:
                  prefix: /
                route:
                  autoHostRewrite: true
                  cluster: kri_extsvc_default___example_9000
                  hashPolicy:
                  - header:
                      headerName: x-hash
                  timeout: 0s
          statPrefix: kri_extsvc_default___example_9000
      name: kri_extsvc_default___example_9000
    name: self_zoneegress_dp_ze-port
    trafficDirection: INBOUND
